--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment\
+  ?useUnicode=true\
+  &useSSL=false\
+  &useJDBCCompliantTimezoneShift=true\
+  &useLegacyDatetimeCode=false\
+  &serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.session.store-type=jdbc
+spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
+spring.jpa.repository=api.BankruptcyRiskAssessment.repository
