--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,29 @@
-<<<<<<< HEAD
-spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = wellcometoHell
-spring.jackson.serialization.fail-on-empty-beans=false
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.session.store-type=jdbc
-
-#security.user.name=admin
-#security.user.password=admin
-#security.user.role=SUPERADMIN
-spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
-spring.jpa.repository=api.BankruptcyRiskAssessment.repository
-spring.mvc.favicon.enabled=false
-logging.level.org.springframework=DEBUG
-logging.level.api.projectmanager=DEBUG
-logging.level.com.fasterxml.jackson=DEBUG
-
-server.port = 8080
-#server.session.cookie.name=sessionid
-#server.session.cookie.http-only=true
-#server.session.cookie.secure=true
-=======
+#<<<<<<< HEAD
+#spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = wellcometoHell
+#spring.jackson.serialization.fail-on-empty-beans=false
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.session.store-type=jdbc
+#
+##security.user.name=admin
+##security.user.password=admin
+##security.user.role=SUPERADMIN
+#spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
+#spring.jpa.repository=api.BankruptcyRiskAssessment.repository
+#spring.mvc.favicon.enabled=false
+#logging.level.org.springframework=DEBUG
+#logging.level.api.projectmanager=DEBUG
+#logging.level.com.fasterxml.jackson=DEBUG
+#
+#server.port = 8080
+##server.session.cookie.name=sessionid
+##server.session.cookie.http-only=true
+##server.session.cookie.secure=true
+#=======
 spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment\
   ?useUnicode=true\
   &useSSL=false\
