--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-#<<<<<<< HEAD
-#spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment?useSSL=false
+#
+#spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment\
+#  ?useUnicode=true\
+#  &useSSL=false\
+#  &useJDBCCompliantTimezoneShift=true\
+#  &useLegacyDatetimeCode=false\
+#  &serverTimezone=UTC
 #spring.datasource.username = root
-#spring.datasource.password = wellcometoHell
+#spring.datasource.password = root
 #spring.jackson.serialization.fail-on-empty-beans=false
 #
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -23,21 +28,25 @@
 ##server.session.cookie.name=sessionid
 ##server.session.cookie.http-only=true
 ##server.session.cookie.secure=true
-#=======
-spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment\
-  ?useUnicode=true\
-  &useSSL=false\
-  &useJDBCCompliantTimezoneShift=true\
-  &useLegacyDatetimeCode=false\
-  &serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#
+#
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql=true
+#spring.session.store-type=jdbc
+#spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
+#spring.jpa.repository=api.BankruptcyRiskAssessment.repository
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.session.store-type=jdbc
+
+
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/bankruptcyRiskAssessment
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
 spring.jpa.repository=api.BankruptcyRiskAssessment.repository
->>>>>>> {Entity} Company / Depart / User + Efficiency
