--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	compile "org.springframework.boot:spring-boot-starter-security" //<==============
+	compile 'org.springframework.security:spring-security-web:5.1.4.RELEASE' //<==============
+	compile 'org.springframework.security:spring-security-config:5.1.4.RELEASE' //<==============
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
-	runtimeOnly 'org.postgresql:postgresql:9.4-1206-jdbc42'
+	runtimeOnly 'org.postgresql:postgresql:9.4-1206-jdbc42' //<==============
+	compile "org.flywaydb:flyway-core:5.2.4" //<==============
+	compile "org.springframework.boot:spring-boot-starter-thymeleaf" //<==============
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
