--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,11 +42,16 @@
 
 
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/bankruptcyRiskAssessment
+spring.datasource.url= jdbc:postgresql://localhost:5432/bancrupt
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+
 spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
 spring.jpa.repository=api.BankruptcyRiskAssessment.repository
