--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@
 
 
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/bancrupt
+spring.datasource.url= jdbc:postgresql://localhost:5432/bankruptcyRiskAssessment
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
