--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	compile "org.springframework.boot:spring-boot-starter-security" //<==============
-	compile 'org.springframework.security:spring-security-web:5.1.4.RELEASE' //<==============
-	compile 'org.springframework.security:spring-security-config:5.1.4.RELEASE' //<==============
+	compile "org.springframework.boot:spring-boot-starter-security" //<==============
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
