--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,21 @@
-#
+spring.datasource.url= jdbc:postgresql://localhost:5432/bankruptcy
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
+spring.jpa.repository=api.BankruptcyRiskAssessment.repository
+
+
+
+#-------------------------------------------------------------------------------
 #spring.datasource.url = jdbc:mysql://localhost:3306/bankruptcyRiskAssessment\
 #  ?useUnicode=true\
 #  &useSSL=false\
@@ -38,20 +55,3 @@
 #spring.session.store-type=jdbc
 #spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
 #spring.jpa.repository=api.BankruptcyRiskAssessment.repository
-
-
-
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/bankruptcyRiskAssessment
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-
-
-spring.jpa.entity.package=api.BankruptcyRiskAssessment.entity
-spring.jpa.repository=api.BankruptcyRiskAssessment.repository
